<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeus</name>
  <version>0.0.0</version>
  <description>this is the metapackage having all the zeus packages</description>
  <maintainer email="vismayshah121@gmail.com">vismay</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zeus_description</exec_depend>
  <exec_depend>zeus_bringup</exec_depend>
  <exec_depend>zeus_gazebo</exec_depend>
  <exec_depend>zeus_can_interface</exec_depend>
  <exec_depend>zeus_control_interface</exec_depend>
  <exec_depend>zeus_hardware_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
